--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,15 @@
-# Object files
+generated/*
+calc
+
+*~
+*.swp
 *.o
-
-# Libraries
-*.lib
-*.a
-
-# Shared objects (inc. Windows DLLs)
-*.dll
-*.so
-*.so.*
-*.dylib
-
-# Executables
+*.mod
+*.mod.c
+*.cmd
+*.order
+*.ko
+*.symvers
+*.com
 *.exe
-*.out
-*.app
+
